# bevy_gltf_collider

./: Cargo.toml
src/: lib.rs  mesh_collider.rs
