[package]
name = "bevy_gltf_collider"
version = "0.2.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16"}
bevy_rapier3d = { version="0.31.0", features=['serde-serialize'] }
serde_json = {version="1.0"}
serde = {version="1.0"}
bincode="1.3.3"
[dev-dependencies]
rand = "0.8.5"
